<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Locusta</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_clear_events">Clear events</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_current_location">Current location</string>
    <string name="add_event">Add event</string>
    <string name="provider_enabled">The provider %s is now enabled</string>
    <string name="provider_disabled">The provider %s is now disabled</string>
    <string name="provider_new_status">The provider %1$s has now a new status %2$s</string>
    <string name="display_current_location">Current loaction : Latitude = %1$s, Longitude = %2$s</string>
    <string name="event_description">By user : %1$s\nStart date : %2$s\nEnd date : %3$s\nDescription :\n%4$s</string>
    <string name="welcome">Welcome to Locusta</string>
    <string name="exit">Exit Locusta</string>
    <string name="pseudo">pseudo</string>
    <string name="pass">pass</string>
    <string name="valider">Validate</string>
    <string name="newUser">Nouvel utilisateur</string>
    <string name="creer">Create</string>
    <string name="yourFriends">Your friends</string>
    <string name="infoFriends">People checked are your future friends</string>
    <string name="othersFriends">The others</string>
    <string name="ok">OK</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="friend_toast">One of your friends</string>

</resources>